@@ -1,5 +1,6 @@
 Version 1.0 -- DEVELOPMENT
 --------------------------
+- Updated config_default.php to include attachment_common plugin (now in distribution)
 - A few minor speed improvements
 - Fixed problems in sqimap_read_body(), made it more reliable
 - Added Finnish translation by Teemu Junnila <teejun@vallcom.com>
